force-app/main/default/objects/Student_Details__c/Student_Details__c.object-meta.xml
<CustomObject>
    <label>Student Details</label>
    <nameField>
        <label>StudentId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>