force-app/main/default/objects/Student_Details__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <label>Auto Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>