force-app/main/default/objects/Student_Details__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>Enter the course name</description>
    <inlineHelpText>Enter the course name</inlineHelpText>
    <label>Course Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>