force-app/main/default/objects/Student_Details__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <description>Please enter the student name</description>
    <inlineHelpText>Please enter the student name</inlineHelpText>
    <label>Student Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>