force-app/main/default/objects/Student_Details__c/fields/Test_num__c.field-meta.xml
<CustomField>
    <fullName>Test_num__c</fullName>
    <formula>(365/(TODAY() - DATE(YEAR(TODAY()),01,01)))*5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>