force-app/main/default/objects/Student_Details__c/recordTypes/TestRec.recordType-meta.xml
<RecordType>
    <fullName>TestRec</fullName>
    <active>true</active>
    <label>TestRec</label>
</RecordType>