force-app/main/default/objects/Student_Details__c/validationRules/Marks_Validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Marks_Validation_rule</fullName>
    <active>true</active>
    <description>Marks Validation rule</description>
    <errorConditionFormula>marks__c &lt;0</errorConditionFormula>
    <errorDisplayField>marks__c</errorDisplayField>
    <errorMessage>Marks should not less than zero</errorMessage>
</ValidationRule>