force-app/main/default/objects/Student_Details__c/listViews/Java.listView-meta.xml
<ListView>
    <fullName>Java</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Course_Name__c</columns>
    <columns>marks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course_Name__c</field>
        <operation>equals</operation>
        <value>java</value>
    </filters>
    <label>Java</label>
</ListView>