force-app/main/default/objects/Student_Details__c/listViews/Sales_force.listView-meta.xml
<ListView>
    <fullName>Sales_force</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Course_Name__c</columns>
    <columns>marks__c</columns>
    <columns>Grade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course_Name__c</field>
        <operation>contains</operation>
        <value>force</value>
    </filters>
    <label>Sales force</label>
    <sharedTo>
        <group>TestGroupName</group>
        <role>CFO</role>
    </sharedTo>
</ListView>