force-app/main/default/objects/Student_Details__c/listViews/TestView.listView-meta.xml
<ListView>
    <fullName>TestView</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Grade__c</columns>
    <columns>marks__c</columns>
    <columns>Student_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>TestView</label>
</ListView>